--- a/docs/howtos/solutions/index-solutions.mdx
+++ b/docs/howtos/solutions/index-solutions.mdx
@@ -215,3 +215,17 @@ Learn how to easily build, test and deploy code for common microservice and cach
 </div>
 
 </div>
+
+## Geo Location Search
+
+<div class="row">
+
+<div class="col">
+  <RedisCard
+    title="Geo Location Search in Redis"
+    description="Getting Started With Geo Location Search in Redis"
+    page="/howtos/solutions/geo/getting-started"
+  />
+</div>
+
+</div>
